<resources>
    <string name="app_name">Open-Team4 Trotro</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->

    <string name="first_slide_title">Know Your Trotro Fares</string>

    <string name="second_slide_title">Report On Missing Items?</string>

    <string name="third_slide_title">Add Missing Bus Stop</string>

    <string name="fourth_slide_title">DigiLigc Smart Logistics Winner Eu Funded Project</string>


    <!--Descriptions-->

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related trotro Fares to match your bus stops. </string>

    <string name="second_slide_desc">We provide almost all the numbers of all stations and landmarks registered with us. You can easily redeem found items as well.</string>

    <string name="third_slide_desc">If you have a station or have fleet of Minivans a part of our growing industry with (EU, GPRTU, AMA, Google) then add your profile by following simple steps.</string>

    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <string name="forgot_password_title_description"> Enter your username and email- address, We\'ll send you an email to reset the password</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="_0">0</string>
    <!--Buttons-->

    <string name="skip_btn">Skip</string>

    <string name="next_btn">Next</string>

    <string name="let_get_started">Lets Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="trotrolive">TrotroLive</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_login_with">or Login With</string>
    <string name="join_the_community">Join The Better Trotro</string>
    <string name="profile_picture">Profile picture</string>
    <string name="set_profile_image">set Profile Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_startup_optional">StartUp</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have Account?</string>
    <string name="register_later">later</string>
    <string name="please_wait">Please Wait</string>
    <string name="i_agree_to_the_terms_and_condition">"i agrees to terms and conditions "</string>
    <string name="err_msg_enter_first_name">Enter Your First Name</string>
    <string name="err_msg_enter_last_name">Enter Your Last Name</string>
    <string name="err_msg_enter_email">Enter Your Email</string>
    <string name="content_description">content description</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">password</string>
    <string name="lb1_forgot_password">forgot password</string>
    <string name="btn_lb1_login">LOGIN</string>
    <string name="don_t_have_an_accpomt">Don\'t have an account ?</string>
    <string name="err_msg_enter_password">enter your password please!</string>
    <string name="title_forgot_password">forgot password</string>
    <string name="btn_lbl_sumbit">Sumbit</string>
    <string name="email_sent_success">email sent</string>
    <string name="register_success">success</string>
    <string name="hey_shuttle_buddy">Hey TrotroLive buddy</string>
    <string name="know_your_trotro_fare">Know Your Trotro Fare</string>
    <string name="pregnant">pregnant</string>
    <string name="disabled">disabled</string>
    <string name="textview">TextView</string>

    <string name="shuttledriveDescription">Transportation Backed With Data <b>Trotro digitalizing </b> platform for trips within and across countries in <b>west africa</b></string>


    <string-array name="seats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="care">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>