<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.PaymentActivity"
    android:orientation="vertical"
    android:id="@+id/drawerLB"
    android:padding="10dp">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckOut"
        android:textColor="@color/Primary"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/booking_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/img_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/shuttleImg"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground" />

            </androidx.cardview.widget.CardView>


            <!--Creating a TextView for name-->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_card"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="Name"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/from_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_card"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="From"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/to_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/from_loc"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_card"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="To"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/to_loc"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_card"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="Date"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_card"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="Agency"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/disabled"
                    android:src="@drawable/wheelchair" />

                <TextView
                    android:id="@+id/disabled"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/inter"
                    android:inputType="none"
                    android:padding="0dp"
                    android:text="@string/_0"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/pregnant"
                    android:src="@drawable/woman" />

                <TextView
                    android:id="@+id/pregnant"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/inter"
                    android:inputType="none"
                    android:padding="0dp"
                    android:text="@string/_0"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="GHc 0.00"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:fontFamily="@font/inter" />

    <Button
        android:id="@+id/confirmPayBn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/Primary"
        android:text="confirm payment"
        android:textColor="@color/white"
        android:fontFamily="@font/inter" />

</LinearLayout>